--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nindle</title>
+    <!-- 开启调试 -->
+    <!-- <script src="https://unpkg.com/vconsole/dist/vconsole.min.js"></script>
+    <script>
+      var vConsole = new window.VConsole()
+    </script>
+    <style>
+      #__vconsole {
+        font-size: 24px !important;
+      }
+    </style> -->
   </head>
   <body>
     <div id="app"></div>
